--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,15 @@
   <meta charset="utf-8">
   <title>PortfolioAngular</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Urku Portfolio :: Pixeden</title>
   <link rel="icon" type="image/svg+xml" href="assets/img/urku-ico.svg">
   <link rel="stylesheet" href="assets/css/aurora-pack.min.css">
   <link rel="stylesheet" href="assets/css/aurora-theme-base.min.css">
   <link rel="stylesheet" href="assets/css/urku.css">
 </head>
-<body>
+<body class="top-fixed">
   <app-root></app-root>
 
 
